[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-knowledge-mcp-server"
version = "0.1.0"
description = "A Semantic Knowledge Retriever (RAG) MCP server for vector indexing and semantic search over project docs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
]

[project.scripts]
rag-knowledge-mcp = "rag_knowledge_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
